# nereus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requierements.txt  requirements.txt
.github/workflows/: ruff.yml
nereus/: __init__.py  __main__.py  config.py  constants.py  logger.py
nereus/cluster/: models.py  training_data.py
nereus/datasets/: __init__.py  argo.py  data_utils.py  itp.py  merged.py  udash.py
nereus/plots/: bins_projections.py  itps_plots.py  plots.py
nereus/processing/: coordinates_utils.py  data_utils.py
nereus/utils/: decorator.py  directories.py  downloader.py  file_ops.py  iterable_ops.py  itp.py  progress.py  simple_functions.py
notebooks/: data_preprocess.ipynb
tests/: decorators.py  simple_function_test.py
